# mmesh

./: CMakeLists.txt  mmhashinternal.h
.github/workflows/: check.yml
include/: CMakeLists.txt  meshdecimation.h
src/: CMakeLists.txt  meshdecimation.c  meshoptimizer.c  mm.c  mmhash.c  mmthread.c
